--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -175,6 +175,10 @@
   font-size: 30rpx;
   color: #333;
   font-weight: 600;
+  max-width: 350rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .publish-time {
