--- a/pages/alumni-association/create/create.wxss
+++ b/pages/alumni-association/create/create.wxss
@@ -31,8 +31,8 @@ page {
 
 .add-btn {
   font-size: 26rpx;
-  color: #ff6b9d;
-  border: 1rpx solid #ff6b9d;
+  color: #40B2E6;
+  border: 1rpx solid #40B2E6;
   padding: 6rpx 20rpx;
   border-radius: 30rpx;
 }
@@ -151,7 +151,7 @@ page {
 }
 
 .submit-btn {
-  background-color: #ff6b9d;
+  background-color: #40B2E6;
   color: #fff;
   margin-top: 60rpx;
   border-radius: 40rpx;
