--- a/pages/profile/privacy/privacy.wxml
+++ b/pages/profile/privacy/privacy.wxml
@@ -14,7 +14,7 @@
           <text class="menu-desc">其他用户可以看到您的头像</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showAvatar}}" bindchange="togglePrivacy" data-key="showAvatar" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showAvatar}}" bindchange="togglePrivacy" data-key="showAvatar" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -24,7 +24,7 @@
           <text class="menu-desc">其他用户可以看到您的昵称</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showNickname}}" bindchange="togglePrivacy" data-key="showNickname" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showNickname}}" bindchange="togglePrivacy" data-key="showNickname" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -34,7 +34,7 @@
           <text class="menu-desc">其他用户可以看到您的真实姓名</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showName}}" bindchange="togglePrivacy" data-key="showName" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showName}}" bindchange="togglePrivacy" data-key="showName" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -44,7 +44,7 @@
           <text class="menu-desc">其他用户可以看到您的性别</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showGender}}" bindchange="togglePrivacy" data-key="showGender" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showGender}}" bindchange="togglePrivacy" data-key="showGender" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -54,7 +54,7 @@
           <text class="menu-desc">其他用户可以看到您的出生日期</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showBirthDate}}" bindchange="togglePrivacy" data-key="showBirthDate" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showBirthDate}}" bindchange="togglePrivacy" data-key="showBirthDate" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -64,7 +64,7 @@
           <text class="menu-desc">其他用户可以看到您的手机号</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showPhone}}" bindchange="togglePrivacy" data-key="showPhone" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showPhone}}" bindchange="togglePrivacy" data-key="showPhone" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -74,7 +74,7 @@
           <text class="menu-desc">其他用户可以看到您的星座</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showConstellation}}" bindchange="togglePrivacy" data-key="showConstellation" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showConstellation}}" bindchange="togglePrivacy" data-key="showConstellation" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -84,7 +84,7 @@
           <text class="menu-desc">其他用户可以看到您的个性签名</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showSignature}}" bindchange="togglePrivacy" data-key="showSignature" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showSignature}}" bindchange="togglePrivacy" data-key="showSignature" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -94,7 +94,7 @@
           <text class="menu-desc">其他用户可以看到您的微信号</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showWxNum}}" bindchange="togglePrivacy" data-key="showWxNum" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showWxNum}}" bindchange="togglePrivacy" data-key="showWxNum" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -104,7 +104,7 @@
           <text class="menu-desc">其他用户可以看到您的QQ号</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showQqNum}}" bindchange="togglePrivacy" data-key="showQqNum" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showQqNum}}" bindchange="togglePrivacy" data-key="showQqNum" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -114,7 +114,7 @@
           <text class="menu-desc">其他用户可以看到您的邮箱地址</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showEmail}}" bindchange="togglePrivacy" data-key="showEmail" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showEmail}}" bindchange="togglePrivacy" data-key="showEmail" color="#40B2E6" />
     </view>
   </view>
 
@@ -129,7 +129,7 @@
           <text class="menu-desc">其他用户可以看到您的籍贯</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showOriginProvince}}" bindchange="togglePrivacy" data-key="showOriginProvince" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showOriginProvince}}" bindchange="togglePrivacy" data-key="showOriginProvince" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -139,7 +139,7 @@
           <text class="menu-desc">其他用户可以看到您的当前所在洲</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showCurContinent}}" bindchange="togglePrivacy" data-key="showCurContinent" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showCurContinent}}" bindchange="togglePrivacy" data-key="showCurContinent" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -149,7 +149,7 @@
           <text class="menu-desc">其他用户可以看到您的当前所在国</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showCurCountry}}" bindchange="togglePrivacy" data-key="showCurCountry" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showCurCountry}}" bindchange="togglePrivacy" data-key="showCurCountry" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -159,7 +159,7 @@
           <text class="menu-desc">其他用户可以看到您的当前所在省市</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showCurProvince}}" bindchange="togglePrivacy" data-key="showCurProvince" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showCurProvince}}" bindchange="togglePrivacy" data-key="showCurProvince" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -169,7 +169,7 @@
           <text class="menu-desc">其他用户可以看到您的当前所在市区</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showCurCity}}" bindchange="togglePrivacy" data-key="showCurCity" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showCurCity}}" bindchange="togglePrivacy" data-key="showCurCity" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -179,7 +179,7 @@
           <text class="menu-desc">其他用户可以看到您的当前所在村/区</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showCurCounty}}" bindchange="togglePrivacy" data-key="showCurCounty" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showCurCounty}}" bindchange="togglePrivacy" data-key="showCurCounty" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -189,7 +189,7 @@
           <text class="menu-desc">其他用户可以看到您的详细地址</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showAddress}}" bindchange="togglePrivacy" data-key="showAddress" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showAddress}}" bindchange="togglePrivacy" data-key="showAddress" color="#40B2E6" />
     </view>
   </view>
 
@@ -204,7 +204,7 @@
           <text class="menu-desc">其他用户可以看到您的证件类型</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showIdentifyType}}" bindchange="togglePrivacy" data-key="showIdentifyType" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showIdentifyType}}" bindchange="togglePrivacy" data-key="showIdentifyType" color="#40B2E6" />
     </view>
     <view class="menu-item">
       <view class="menu-left">
@@ -214,7 +214,7 @@
           <text class="menu-desc">其他用户可以看到您的证件号</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showIdentifyCode}}" bindchange="togglePrivacy" data-key="showIdentifyCode" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showIdentifyCode}}" bindchange="togglePrivacy" data-key="showIdentifyCode" color="#40B2E6" />
     </view>
   </view>
 
@@ -229,7 +229,7 @@
           <text class="menu-desc">其他用户可以看到您的个人简介</text>
         </view>
       </view>
-      <switch checked="{{privacySettings.showDescription}}" bindchange="togglePrivacy" data-key="showDescription" color="#ff6b9d" />
+      <switch checked="{{privacySettings.showDescription}}" bindchange="togglePrivacy" data-key="showDescription" color="#40B2E6" />
     </view>
   </view>
 
